--- a/Hotels/index.html
+++ b/Hotels/index.html
@@ -46,7 +46,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="Mv.html">View options</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="mv.html">View options</a></div>
                             </div>
                         </div>
                     </div>
